# Agente-Trading

./: .gitignore  README.md  TRADINGAGENTS_SETUP.md  dashboard.py  notifier.py  pyproject.toml  requirements.txt  run_all.py  run_experiments.py  run_fine_tune.py  run_param_sweep.py  run_subgroup_sweep.py  scheduler.py  setup_scheduler.ps1  test_tradingagents.py
.claude/: settings.local.json
.github/workflows/: crypto-signals.yml  polymarket-signals.yml
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_backtesting.yml  parameters_execution.yml  parameters_feature_engineering.yml  parameters_ingestion.yml  parameters_llm_agents.yml
docs/source/: Documento de Diseño de Software.md  Referencia de API - Nodos y Parámetros.md  conf.py  diagramas.md  index.rst
src/trading_agent/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/trading_agent/pipelines/: shared_utils.py
src/trading_agent/pipelines/alpaca/: __init__.py  nodes.py  pipeline.py
src/trading_agent/pipelines/backtesting/: __init__.py  nodes.py  pipeline.py
src/trading_agent/pipelines/execution/: __init__.py  nodes.py  pipeline.py
src/trading_agent/pipelines/feature_engineering/: __init__.py  nodes.py  pipeline.py
src/trading_agent/pipelines/ingestion/: __init__.py  nodes.py  pipeline.py
src/trading_agent/pipelines/llm_agents/: __init__.py  nodes.py  pipeline.py
src/trading_agent/pipelines/polymarket/: __init__.py  nodes.py  pipeline.py
tests/: conftest.py  test_run.py
tests/pipelines/backtesting/: test_pipeline.py
tests/pipelines/execution/: test_pipeline.py
tests/pipelines/feature_engineering/: test_pipeline.py
tests/pipelines/ingestion/: test_pipeline.py
tests/pipelines/llm_agents/: test_pipeline.py
tests/pipelines/polymarket/: test_pipeline.py
